--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
+<!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
     <script src="pixi.js"></script>
     <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
